...
                android:layout_height="match_parent"
                android:alpha="0.9"
                android:scaleType="centerCrop"
                android:src="@drawable/login_cover" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/layout_dp35"
                android:layout_height="@dimen/layout_dp35"
                android:layout_marginStart="@dimen/margin_start_dp16"
                android:layout_marginTop="@dimen/margin_top_dp16"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/raleway_medium_italic"
                android:letterSpacing="0.05"
                android:shadowColor="@color/background_color"
...
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="@color/popup_background">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@drawable/neumorph_edittext"
                        android:fontFamily="@font/raleway_light_italic"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_mail"
...
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="@color/popup_background"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@drawable/neumorph_edittext"
                        android:fontFamily="@font/raleway_light_italic"
                        android:gravity="center_vertical"
                        android:hint="@string/password_hint"
...
                        android:text="@string/remember_me"
                        android:textAlignment="center"
                        android:textColor="@color/title_color"
                        android:textSize="@dimen/text_sp15" />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="@dimen/margin_top_dp10"
                        android:fontFamily="@font/raleway_medium"
                        android:padding="8dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/title_color"
                        android:textSize="@dimen/text_sp15" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/remember_box"
                    android:layout_marginStart="@dimen/margin_start_dp32"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/margin_end_dp32"
...
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/btnGoogleSignIn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/google_icon"
                        android:contentDescription="@string/google_login"
                        android:scaleType="fitCenter" />

                    <Space
                        android:layout_width="35dp"
                        android:layout_height="match_parent" />

                    <ImageButton
                        android:id="@+id/btnFacebookLogin"
                        android:layout_width="52dp"
                        android:layout_height="48dp"
                        android:background="@drawable/facebook_icon"
                        android:contentDescription="@string/facebook_login"
                        android:scaleType="fitCenter" />

...
                        android:text="@string/no_account"
                        android:textSize="@dimen/text_sp15"
                        android:textColor="@color/title_color"
                        android:fontFamily="@font/raleway_medium" />

                    <TextView
                        android:id="@+id/tvSignUpBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textSize="@dimen/text_sp15"
                        android:textColor="@color/title_color"
                        android:fontFamily="@font/raleway_bold_italic" />
...
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/GradientProgressBar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="top|center_horizontal"/>
...
