...
        android:id="@+id/coverFragment"
        android:name="com.cursoandroid.queermap.ui.cover.CoverFragment"
        android:label="Cover"
        tools:layout="@layout/fragment_cover">
        <action
            android:id="@+id/action_cover_to_login"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />

        <action
...
